@@ -1,5 +1,9 @@
 2000-10-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* cribbage/cribbage.h: Mark msg() and addmsg() with printf format
+	attributes.
+	* hack/extern.h: Make vpline() with printf format attribute.
+
 	* monop/misc.c (next_play): Fix undefined order of side effects.
 	* monop/prop.c (bid): Likewise.
 
